--- a/stylesheet.css
+++ b/stylesheet.css
@@ -176,3 +176,54 @@ ul {
     margin-left: 20px;
 }
 
+
+.overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    right: 0;
+    left: 0;
+
+}
+
+.modal {
+    background: white;
+    width: 300px;
+    height: 30px;
+    padding: 30px;
+    position: relative;
+
+}
+
+
+.ModalClose {
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    background-color: blue;
+    color: white;
+    border: none;
+    right: 0;
+    top: 0;
+}
+
+.ModalForm {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+}
+
+.ModalButtonSave {
+    background: blue;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+
