--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,7 +37,7 @@
     margin-top: 53px;
 }
 
-.newNoteButtonItem:hover{
+.newNoteButtonItem:hover {
     cursor: pointer;
 }
 
@@ -71,10 +71,11 @@
 ul {
     list-style-type: none;
     margin-left: 20px;
-} 
+}
 
 .TagsButton {
     margin-right: 40px;
+    font-size: 25px;
 }
 
 .TagsList>button {
@@ -111,7 +112,7 @@ ul {
     height: 50px;
     width: 50px;
     border: none;
-    background-color:#4499FF;
+    background-color: #4499FF;
     border-radius: 10px;
 }
 
@@ -152,7 +153,7 @@ ul {
     align-self: flex-start;
     overflow: fit-content;
     margin-left: 20px;
-    margin-top:10px;
+    margin-top: 10px;
 }
 
 .NoteTag {
@@ -177,7 +178,7 @@ ul {
 }
 
 
-.overlay {
+.overlayClosed {
     background-color: rgba(0, 0, 0, 0.5);
     position: fixed;
     top: 0;
@@ -187,16 +188,27 @@ ul {
     justify-content: center;
     right: 0;
     left: 0;
+}
 
+.overlayOpened {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    right: 0;
+    left: 0;
 }
 
 .modal {
     background: white;
-    width: 300px;
-    height: 30px;
+    width: 600px;
+    height: 150px;
     padding: 30px;
     position: relative;
-
+    border-radius: 20px;
 }
 
 
@@ -204,11 +216,12 @@ ul {
     position: absolute;
     width: 30px;
     height: 30px;
-    background-color: blue;
+    background-color: #4499FF;
     color: white;
     border: none;
     right: 0;
     top: 0;
+    border-radius: 10px 20px 0 10px;
 }
 
 .ModalForm {
@@ -218,12 +231,27 @@ ul {
 
 }
 
+.ModalInput {
+    border-radius: 10px;
+    border: 1px solid #D8D9DA;
+    padding: 10px;
+    font-size: 15px;
+}
+
+
+
+.ModalSelect {
+    border-radius: 10px;
+    border: 1px solid #D8D9DA;
+    padding: 10px;
+    font-size: 15px;
+}
+
 .ModalButtonSave {
-    background: blue;
+    background: #4499FF;
     color: white;
     border: none;
     padding: 10px;
     border-radius: 10px;
+    margin-top: 5px;
 }
-
-
